--- a/src/articles/Addresses.astro
+++ b/src/articles/Addresses.astro
@@ -1,10 +1,14 @@
 <article>
   <header><h2>Addresses</h2></header>
   <address>
-    <p>Written by Jon Doe.</p>
-    <p>Visit us at:</p>
-    <p>Example.com</p>
-    <p>Box 564, Disneyland</p>
-    <p>USA</p>
+    Written by <a href="">Jon Doe.</a>
+    <br />
+    Visit us at:
+    <br />
+    Example.com
+    <br />
+    Box 564, Disneyland
+    <br />
+    USA
   </address>
 </article>
