--- a/src/articles/HorizontalRules.astro
+++ b/src/articles/HorizontalRules.astro
@@ -13,4 +13,10 @@
     harum, modi, cum velit ipsa perspiciatis dignissimos soluta fugit accusamus
     dolorum.
   </p>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam sequi
+    molestias error adipisci voluptatum corrupti, veritatis minima nemo fugiat
+    harum, modi, cum velit ipsa perspiciatis dignissimos soluta fugit accusamus
+    dolorum.
+  </p>
 </article>
