--- a/src/articles/embedded-content/Meter.astro
+++ b/src/articles/embedded-content/Meter.astro
@@ -1,4 +1,4 @@
 <article>
   <header><h2>Meter</h2></header>
-  <meter value="60"></meter>
+  <meter value="2" min="0" max="10">2 out of 10</meter>
 </article>
