--- a/src/articles/Code.astro
+++ b/src/articles/Code.astro
@@ -8,7 +8,7 @@
   <p>
     <strong>Inline code</strong>
 
-    <code> Enter </code>
+    <code> <div>Enter</div> </code>
   </p>
   <p>
     <strong>Sample output</strong>
