--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Navbar from "../components/Navbar.astro";
-import "../../ProgresCSS.css";
+import "/ProgresCSS.css";
 
 interface Props {
   title: string;
@@ -18,7 +18,6 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <link rel="stylesheet" href="../../ProgresCSS.css" />
   </head>
   <body>
     <Navbar />
